Added shipping calculation to add to the final order total on confirmation page. Also now displays the estimated delivery date if there is one.

--- a/app/views/orders/confirmation.html.erb
+++ b/app/views/orders/confirmation.html.erb
@@ -1,47 +1,45 @@
-<h1>Order confirmation</h1>
+<h1>Order Confirmation</h1>
 
 <table class="table">
     <tr>
-      <th>
-        Item
-      </th>
-      <th>
-        Price
-      </th>
-      <th>
-        Quantity
-      </th>
-      <th>
-        Item total
-      </th>
+      <th>Item</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Item total</th>
     </tr>
     <% @order.order_items.each do |order_item| %>
       <% item_price = order_item.product.price %>
       <tr>
-        <td>
-          <%= link_to order_item.product.name, product_path(order_item.product) %>
-        </td>
-        <td>
-          <%= readable_price(item_price) %>
-        </td>
-        <td>
-          <%= order_item.quantity %>
-        </td>
-        <td>
-          <%= readable_price(order_item.item_total) %>
-        </td>
+        <td><%= link_to order_item.product.name, product_path(order_item.product) %></td>
+        <td><%= readable_price(item_price) %></td>
+        <td><%= order_item.quantity %></td>
+        <td><%= readable_price(order_item.item_total) %></td>
       </tr>
     <% end %>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Subtotal:</th>
+      <th><%= readable_price(@order.final_total) %></th>
+    </tr>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Shipping:</th>
+      <th><%= @shipping_cost %></th>
+    </tr>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Order Total:</th>
+      <th><%= number_to_currency(@grand_total_cost) %></th>
+    </tr>
   </table>
 
-<p>
-  Order total: <%= readable_price(@order.final_total) %>
-</p>
-<p>
-  Order time: <%= readable_date(@order.updated_at) %>
-</p>
-<p>
-  Current status: <%= @order.status %>
-</p>
+<p><strong>Order time:</strong> <%= readable_date(@order.updated_at) %></p>
+<p><strong>Estimated Delivery Date:</strong> <%= @delivery_date %></p>
+<p><strong>Current status:</strong> <%= @order.status.upcase %></p>
+
 <%= button_to "Cancel Order", cancel_order_path, class: "btn btn-danger" %>
+<br>
 <%= link_to "Return to shopping", products_path, class: "btn btn-primary" %>
