Updated order details to be called subtotal since it does not include shipping yet

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -23,13 +23,13 @@
         <tr>
           <td></td>
           <td></td>
-          <td>Selected Shipping</td>
-          <td>$ -----</td>
+          <td>Shipping</td>
+          <td>$ (select) </td>
         </tr>
         <tr>
           <td></td>
           <td></td>
-          <td><strong>TOTAL:</strong></td>
+          <td><strong>Subtotal:</strong></td>
           <td><strong><%= readable_price(@order.subtotal) %></strong></td>
         </tr>
     </table>
