--- a/app/views/orders/shipping_confirmation.html.erb
+++ b/app/views/orders/shipping_confirmation.html.erb
@@ -11,8 +11,10 @@
             checked = false
           )
           %>
+          <%= hidden_field_tag :service_name, rate["service_name"] %>
+
         <p> <%= readable_price(rate["total_price"]) %>
-          <%= rate["delivery_date"]? rate["delivery_date"].to_datetime.strftime("Delivered by: %m/%d") : "No Estimate Available"  %></p>
+            <%= rate["delivery_date"]? rate["delivery_date"].to_datetime.strftime("Delivered by: %m/%d") : "No Estimate Available"  %></p>
       </div>
   <% end %>
   <%= submit_tag "Continue", class:"btn btn-primary" %>
