Changed filepath for background image so it displays on heroku

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -17,7 +17,7 @@
 
 html {
   background: #ddd
-  url('matrix.jpg') no-repeat center fixed;
+  url(<%= asset_path 'matrix.jpg' %>) no-repeat center fixed;
   background-size: cover;
 }
 
